--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/logo.svg">
       <link rel="stylesheet" href="src/assets/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Okla</title>
   </head>
   <body>
     <div id="app"></div>
